# parallel_indexing

./: CMakeLists.txt  main.cpp  script.py
files/: res_a.txt  res_n.txt
include/archive_handler/: archive_handler.h
include/conc_queue/: synch_queue.h
include/conf_handler/: confhandler.h
include/word_counting/: map_merging.h  word_counting.h
src/archive_handler/: archive_handler.cpp
src/conf_handler/: confhandler.cpp
src/word_counting/: map_merging.cpp  word_counting.cpp
